[gd_scene load_steps=9 format=3 uid="uid://c5l452gsrmtpt"]

[ext_resource type="Script" path="res://scripts/magic_teapot.gd" id="1_ojsf7"]
[ext_resource type="Texture2D" uid="uid://3w8ydsrek5x" path="res://sprite/inv_pottery_teapot_raw.png" id="2_qtghs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y5w11"]
radius = 28.0179

[sub_resource type="Animation" id="Animation_r4bvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pog1n"]
resource_name = "teapot_blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0.137255, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1os3e"]
resource_name = "teapot_fade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5qbvo"]
_data = {
"RESET": SubResource("Animation_r4bvi"),
"teapot_blink": SubResource("Animation_pog1n"),
"teapot_fade": SubResource("Animation_1os3e")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7ttp"]
size = Vector2(28, 11)

[node name="MagicTeapot" type="Node2D"]
script = ExtResource("1_ojsf7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_qtghs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_y5w11")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5qbvo")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_t7ttp")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
